# papers

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  test.sh
.circleci/: config.yml
migrations/: 20211120001512_initial.sql
src/: api.rs  config.rs  database.rs  error.rs  main.rs  openapi.rs  testing.rs
src/db/: account.rs  error.rs  mod.rs  role.rs
src/extractors/: claims.rs  mod.rs
src/keys/: encoding.rs  hmac.rs  jwk.rs  mod.rs  rsa_key.rs
src/models/: api_secret.rs  claims.rs  mod.rs  resources.rs
src/routes/: accounts.rs  docs.rs  healthcheck.rs  jwks.rs  mod.rs  role_permissions.rs  roles.rs  token.rs
src/schemas/: account.rs  jwt.rs  mod.rs  role.rs  token.rs
src/util/: mod.rs  root_secrets.rs
